--- a/Code/Final.qmd
+++ b/Code/Final.qmd
@@ -10,14 +10,12 @@ https://github.com/liamgilson18/ENVS-193DS_spring-2025_final
 ```{r, message=FALSE, warning=FALSE}
 #read in code chunk
 
-library(tidyverse)
-library(dplyr)    # For data manipulation
-library(lubridate)  # For working with dates
-library(forcats)  # For working with factors
-library(tibble)   # For tibble formatting
-sst <- read.csv(here::here("data", "SST_update2023.csv"))
-
-#read in data here as well
+library(tidyverse) #load in tidyverse
+library(dplyr)    # load in dplyr
+library(lubridate)  #load in lubridate
+library(forcats)  # load in forcats
+library(tibble)   # load in tibble
+sst <- read.csv(here::here("data", "SST_update2023.csv")) #create object sst from data downloaded
 ```
 
 # Problem 1
@@ -49,25 +47,21 @@ We reject the null hypothesis for the one way ANOVA test, (one-way ANOVA, F(amon
 #### a. Cleaning and Summarizing
 
 ```{r}
-# Clean and summarize SST data
-sst_clean <- sst |> 
-  # Step 1: Convert date column and extract year and month
-  mutate(
-    date = as.Date(date),  # Ensure date is in Date format
-    year = factor(year(date)),  # Extract year as a factor
-    month = factor(month(date, label = TRUE, abbr = TRUE), 
-                   levels = month.abb, ordered = TRUE)  # Ordered month factor
-  ) |>
-  # Step 2: Group by year and month
-  group_by(year, month) |>
-  # Step 3: Calculate the mean of 'temp' for each year-month
-  summarise(mean_monthly_sst = mean(temp, na.rm = TRUE), .groups = "drop") |>
-  # Step 4: Convert to tibble (optional)
-  as_tibble()
 
-# Show 5 random rows
-sst_clean |> slice_sample(n = 5)
+sst_clean <- sst |> #cleaning sst, creating object sst_clean
+  mutate( #Convert date column and extract year and month
+    date = as.Date(date),  # format for date
+    year = factor(year(date)),  # extract year as an intiger
+    month = factor(month(date, label = TRUE, abbr = TRUE), #read in month as "feb" or "Dec"
+                   levels = month.abb, ordered = TRUE)  # use month.abb
+  ) |>   #pipe command
+  group_by(year, month) |> # Group by year and month, pipe command
+  summarise(mean_monthly_sst = mean(temp, na.rm = TRUE), .groups = "drop") |> #clalculate mean temp and drop groups after. pipe command
+  as_tibble()  # Step 4: Convert to tibble 
 
-# Show structure of the tibble
-str(sst_clean)
+sst_clean |> slice_sample(n = 5) # Show 5 random rows
+
+str(sst_clean) # Show structure of the tibble in
 ```
+
+#### b.  
