--- a/Code/Final.qmd
+++ b/Code/Final.qmd
@@ -65,3 +65,48 @@ str(sst_clean) # Show structure of the tibble in
 ```
 
 #### b.  
+
+```{r}
+
+# Filter for years 2018–2023
+sst_filtered <- sst_clean |> 
+  filter(as.numeric(as.character(year)) %in% 2018:2023)
+
+blue_gradient <- c(
+  "2018" = "#c6dbef",
+  "2019" = "#9ecae1",
+  "2020" = "#6baed6",
+  "2021" = "#4292c6",
+  "2022" = "#2171b5",
+  "2023" = "#084594"
+)
+
+# Plot
+ggplot(sst_filtered, aes(x = month, y = mean_monthly_sst, color = year, group = year)) +
+  geom_point(size = 2) +
+  geom_line(linewidth = 1) +
+  labs(
+    x = "Month",
+    y = "Mean monthly sea surface temperature (°C)",
+    color = "Year"
+  ) +
+  theme_minimal(base_size = 14) +
+  theme(
+    panel.grid = element_blank(),
+    axis.ticks = element_blank(),
+    axis.line = element_blank(),
+    legend.position = c(0.05, 0.95),
+    legend.justification = c("left", "top"),
+    legend.title = element_text(size = 10),
+    legend.text = element_text(size = 8),
+    plot.title = element_text(size = 14, face = "bold"),
+    plot.title.position = "plot",
+    legend.background = element_rect(fill = "white", color = NA),
+    panel.border = element_rect(color = "black", fill = NA, linewidth = 0.5),
+    plot.margin = margin(10, 10, 10, 10)
+  ) +
+  scale_color_manual(values = blue_gradient) +  # <- This must stay in the chain
+  coord_cartesian(clip = "off")
+ 
+#xtill need to annotate every code line!!!!!
+```
